# matrix-multithreading-operations

./: .gitignore  CMakeLists.txt  Makefile
include/: matrix.hpp  matrix_multithread_handler.hpp
src/: matrix.cpp  matrix_multithread_handler.cpp  test.cpp  time_measuring.cpp
